testdata/errors/missing_field_size.ral
config { }

register foo: 32 {
  a: ,
  b: 16
}
